force-app/main/default/objects/ccrz__E_ContactAddr__c/ccrz__E_ContactAddr__c.object-meta.xml
<CustomObject>
    <description>Used to store address information.  Associated with Carts, Orders, Invoices, Subscriptions, Payments, etc.</description>
    <label>CC Contact Address</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Contact Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Contact Addresss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>