force-app/main/default/objects/ccrz__E_ContactAddr__c/fields/ccrz__AddressFirstline__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AddressFirstline__c</fullName>
    <description>First line of the street address.</description>
    <label>Address Firstline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>