force-app/main/default/objects/ccrz__E_ContactAddr__c/fields/ccrz__AddressSecondline__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AddressSecondline__c</fullName>
    <description>Second line of the street address.</description>
    <label>Address Secondline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>