force-app/main/default/objects/ccrz__E_ContactAddr__c/fields/ccrz__AddressThirdline__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AddressThirdline__c</fullName>
    <description>Third line of the street address.</description>
    <label>Address Thirdline</label>
    <length>255</length>
    <type>Text</type>
</CustomField>