force-app/main/default/objects/ccrz__E_ContactAddr__c/fields/ccrz__AddrReadOnly__c.field-meta.xml
<CustomField>
    <fullName>ccrz__AddrReadOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether this address is read only.</description>
    <label>AddrReadOnly</label>
    <type>Checkbox</type>
</CustomField>