force-app/main/default/objects/ccrz__E_ContactAddr__c/fields/ccrz__City__c.field-meta.xml
<CustomField>
    <fullName>ccrz__City__c</fullName>
    <description>City for the address.</description>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>