force-app/main/default/objects/ccrz__E_ContactAddr__c/fields/ccrz__CompanyName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CompanyName__c</fullName>
    <description>Company name associated with this address.</description>
    <label>Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>