force-app/main/default/objects/ccrz__E_ContactAddr__c/fields/ccrz__ContactAddrId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ContactAddrId__c</fullName>
    <description>External unique external id used for data loading.  Not used by B2B Commerce.</description>
    <externalId>true</externalId>
    <label>Contact Addr Id</label>
    <length>128</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>