force-app/main/default/objects/ccrz__E_ContactAddr__c/fields/ccrz__Country__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Country__c</fullName>
    <description>Descriptive country name.  Typically country ISO code is used.</description>
    <label>Country</label>
    <length>50</length>
    <type>Text</type>
</CustomField>