force-app/main/default/objects/ccrz__E_ContactAddr__c/fields/ccrz__CountryISOCode__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CountryISOCode__c</fullName>
    <description>ISO code associated with the country.</description>
    <label>Country ISO Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>