force-app/main/default/objects/ccrz__E_ContactAddr__c/fields/ccrz__Email__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Email__c</fullName>
    <description>Email address associated with the address.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>