force-app/main/default/objects/ccrz__E_ContactAddr__c/fields/ccrz__FirstName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__FirstName__c</fullName>
    <description>Person first name associated with the address.</description>
    <label>First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>