force-app/main/default/objects/ccrz__E_ContactAddr__c/fields/ccrz__HomePhone__c.field-meta.xml
<CustomField>
    <fullName>ccrz__HomePhone__c</fullName>
    <description>Secondary phone associated with the address.</description>
    <label>Home Phone</label>
    <type>Phone</type>
</CustomField>