force-app/main/default/objects/ccrz__E_ContactAddr__c/fields/ccrz__LastName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__LastName__c</fullName>
    <description>Person last name associated with the address.</description>
    <label>Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>