force-app/main/default/objects/ccrz__E_ContactAddr__c/fields/ccrz__MailStop__c.field-meta.xml
<CustomField>
    <fullName>ccrz__MailStop__c</fullName>
    <description>MailStop</description>
    <label>Mail Stop</label>
    <length>255</length>
    <type>Text</type>
</CustomField>