force-app/main/default/objects/ccrz__E_ContactAddr__c/fields/ccrz__MiddleName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__MiddleName__c</fullName>
    <description>Person middle name associated with the address.</description>
    <label>Middle Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>