force-app/main/default/objects/ccrz__E_ContactAddr__c/fields/ccrz__Partner_Id__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Partner_Id__c</fullName>
    <description>External Id used to tie the address to another system.  This id is carried through from the address book to the eventual order.</description>
    <label>Partner_Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>