force-app/main/default/objects/ccrz__E_ContactAddr__c/fields/ccrz__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PostalCode__c</fullName>
    <description>Postal Code associated with the address.</description>
    <label>Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>