force-app/main/default/objects/ccrz__E_ContactAddr__c/fields/ccrz__State__c.field-meta.xml
<CustomField>
    <fullName>ccrz__State__c</fullName>
    <description>For non-US or non-Canadian addresses this is the name of the state for the address.</description>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>