force-app/main/default/objects/ccrz__E_ContactAddr__c/fields/ccrz__StateISOCode__c.field-meta.xml
<CustomField>
    <fullName>ccrz__StateISOCode__c</fullName>
    <description>For US and Canadian addresses this is the two letter ISO code for the state.</description>
    <label>State ISO Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>