force-app/main/default/objects/ccrz__E_ContactAddr__c/fields/Primary_Unloading_Point__c.field-meta.xml
<CustomField>
    <fullName>Primary_Unloading_Point__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to indicate the default unloading point for an account.</description>
    <label>Primary Unloading Point</label>
    <type>Checkbox</type>
</CustomField>