force-app/main/default/objects/ccrz__E_ContactAddr__c/fields/ShipTo_Name__c.field-meta.xml
<CustomField>
    <fullName>ShipTo_Name__c</fullName>
    <label>ShipTo Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>