force-app/main/default/objects/ccrz__E_ContactAddr__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>NAME</columns>
    <columns>ccrz__FirstName__c</columns>
    <columns>ccrz__LastName__c</columns>
    <columns>ccrz__AddressFirstline__c</columns>
    <columns>ccrz__AddressSecondline__c</columns>
    <columns>ccrz__City__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>